Fixed a gap in form

--- a/css/sass/index.scss
+++ b/css/sass/index.scss
@@ -51,10 +51,10 @@ main{
         {
             @include extensions.flex-mixin(center);
             flex:0 0 18vw;
-            background-color:rgba(77,70,70,0.63);
-            border-radius: 50px;
             flex-direction: column;
             align-items: center;
+            background-color:rgba(77,70,70,0.63);
+            border-radius: 50px;
             gap:4vh;
             & img{
                 margin-top:2.5%;
@@ -111,24 +111,22 @@ main{
         height:90vh;
         display:grid;
         grid-template-columns:3fr 4fr;
+        place-items: center;
         & .offer-texts{
-
             @include extensions.flex-mixin(center);
             flex-direction: column; 
             & .text{
-                font-size:1.6em;
+                font-size:2em;
             }
         }
         & .offer-form{
-            height:60vh;
-            width:80%;
-            margin:0% 10%;
-            align-self:center;
-            background-color: rgba(0,0,0,0.4);
             @include extensions.flex-mixin(flex-start);
             align-items:center;
             flex-direction: column;
-            gap:10%;
+            height:65vh;
+            width:70%;
+            background-color: rgba(0,0,0,0.4);
+            gap:5%;
             & .text{
                 font-size:2em;
                 margin-top:0;
@@ -136,6 +134,7 @@ main{
             & .label-form{
                 width:80%;
                 & .text{
+                    font-size:1.5em;
                     text-align:left;
                 }
                 & input{
